--- a/hooksDemo/index.css
+++ b/hooksDemo/index.css
@@ -22,3 +22,24 @@
   text-decoration: none;
   color: black;
 }
+
+.demo-container {
+  width: 50rem;
+  height: 30rem;
+  border: 1px solid black;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.light-theme {
+  background-color: azure;
+  color: black;
+}
+
+.dark-theme {
+  background-color: rgb(95, 92, 92);
+  color: white;
+}
